// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grids basic 1`] = `
<mp-half-screen-dialog
  id="dialog"
  bind:buttontap="onButtonTap"
  bind:close="onClose"
>
  <wx-view
    class="weui-hidden"
  >
    <wx-view
      class="weui-mask init"
      data-type="tap"
      bind:tap="close"
    />
    <wx-view
      class="weui-half-screen-dialog "
    >
      <wx-view
        class="weui-half-screen-dialog__hd"
      >
        <wx-view
          class="weui-half-screen-dialog__hd__side"
          data-type="close"
          bind:tap="close"
        >
          <wx-view
            class="weui-icon-btn weui-icon-btn_close"
          >
            关闭
          </wx-view>
        </wx-view>
        <wx-view
          class="weui-half-screen-dialog__hd__main"
        >
          <wx-view
            class="weui-half-screen-dialog__title"
          >
            <wx-view
              slot="title"
            >
              测试标题A
            </wx-view>
          </wx-view>
        </wx-view>
        <wx-view
          class="weui-half-screen-dialog__hd__side"
        >
          <wx-view
            class="weui-icon-btn weui-icon-btn_more"
          >
            更多
          </wx-view>
        </wx-view>
      </wx-view>
      <wx-view
        class="weui-half-screen-dialog__bd"
      >
        <wx-view
          slot="desc"
        >
          这是自定义描述区
        </wx-view>
      </wx-view>
      <wx-view
        class="weui-half-screen-dialog__ft"
      >
        <wx-button
          class="weui-btn "
          data-index="{{0}}"
          type="default"
          bind:tap="buttonTap"
        >
          按钮A
        </wx-button>
        <wx-button
          class="weui-btn "
          data-index="{{1}}"
          type="primary"
          bind:tap="buttonTap"
        >
          按钮B
        </wx-button>
      </wx-view>
    </wx-view>
  </wx-view>
</mp-half-screen-dialog>
`;

exports[`grids basic 2`] = `
<mp-half-screen-dialog
  id="dialog"
  bind:buttontap="onButtonTap"
  bind:close="onClose"
>
  <wx-view
    class="weui-show"
  >
    <wx-view
      class="weui-mask init"
      data-type="tap"
      bind:tap="close"
    />
    <wx-view
      class="weui-half-screen-dialog "
    >
      <wx-view
        class="weui-half-screen-dialog__hd"
      >
        <wx-view
          class="weui-half-screen-dialog__hd__side"
          data-type="close"
          bind:tap="close"
        >
          <wx-view
            class="weui-icon-btn weui-icon-btn_close"
          >
            关闭
          </wx-view>
        </wx-view>
        <wx-view
          class="weui-half-screen-dialog__hd__main"
        >
          <wx-view
            class="weui-half-screen-dialog__title"
          >
            <wx-view
              slot="title"
            >
              测试标题A
            </wx-view>
          </wx-view>
        </wx-view>
        <wx-view
          class="weui-half-screen-dialog__hd__side"
        >
          <wx-view
            class="weui-icon-btn weui-icon-btn_more"
          >
            更多
          </wx-view>
        </wx-view>
      </wx-view>
      <wx-view
        class="weui-half-screen-dialog__bd"
      >
        <wx-view
          slot="desc"
        >
          这是自定义描述区
        </wx-view>
      </wx-view>
      <wx-view
        class="weui-half-screen-dialog__ft"
      >
        <wx-button
          class="weui-btn "
          data-index="{{0}}"
          type="default"
          bind:tap="buttonTap"
        >
          按钮A
        </wx-button>
        <wx-button
          class="weui-btn "
          data-index="{{1}}"
          type="primary"
          bind:tap="buttonTap"
        >
          按钮B
        </wx-button>
      </wx-view>
    </wx-view>
  </wx-view>
</mp-half-screen-dialog>
`;
